Horario/Horario/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: horario
  labels:
    app: horario-frontend
    tier: horario
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31000
    protocol: TCP
  selector:
    app: horario-frontend
    tier: horario
